decision selector, refactoring

--- a/SWDApp/SWDApp.csproj
+++ b/SWDApp/SWDApp.csproj
@@ -60,13 +60,14 @@
   <ItemGroup>
     <Compile Include="AHP.cs" />
     <Compile Include="CriterionSelectActivity.cs" />
+    <Compile Include="DecisionSelectActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
-    <AndroidResource Include="Resources\layout\CriterionSelect.axml">
+    <AndroidResource Include="Resources\layout\Selector.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
     <None Include="packages.config" />
